<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
		android:id="@+id/apps"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif-black"
		android:text="@string/apps"
		android:textSize="12sp"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="6dp"
		android:layout_marginTop="6dp"/>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="2dp"
		android:visibility="invisible">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/socks_addr"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/socks_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/socks_port"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/socks_port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="number"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/socks_user"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/socks_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/socks_pass"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/socks_pass"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="textPassword"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/dns_ipv4"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/dns_ipv4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:digits="0123456789."/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/dns_ipv6"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/dns_ipv6"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:digits="0123456789abcdef:"/>
		<CheckBox
			android:id="@+id/udp_in_tcp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/udp_in_tcp"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="2dp"
		android:gravity="center"
		android:layout_marginTop="50dp">
		<RelativeLayout
			android:id="@+id/rl_contain"
			android:layout_width="wrap_content"
			android:layout_height="150dp"
			android:gravity="center"
			>
			<ImageView
				android:id="@+id/imageView"
				android:layout_width="42dp"
				android:layout_height="30dp"
				android:background="@mipmap/icon"
				android:layout_centerInParent="true"
				/>

			<hev.sockstun.RegularTextView
				android:id="@+id/statusTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="鸡毛信"
				android:textSize="40sp"
				android:layout_marginTop="50dp"/>
		</RelativeLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:visibility="invisible">
			<CheckBox
				android:id="@+id/ipv4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/ipv4"/>
			<CheckBox
				android:id="@+id/ipv6"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/ipv6"/>
			<CheckBox
				android:id="@+id/global"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:visibility="invisible"
				android:text="@string/global"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center">
			<Button
				android:id="@+id/save"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/save"
				android:visibility="invisible"/>

			<Button
				android:id="@+id/control"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/button_select_background"
				android:fontFamily="sans-serif-black"
				android:text="@string/control_enable" />
			<TextView
				android:id="@+id/timerTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="monospace"
				android:text="接入时间"
				android:textColor="#4DA0E8"
				android:textSize="18sp"
				android:visibility="gone"
				android:layout_marginTop="20dp"
				/>

			<TextView
				android:id="@+id/timerTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="monospace"
				android:text="00:00:00"
				android:visibility="gone"
				android:textColor="@color/white"
				android:textSize="18sp"
				android:layout_marginTop="20dp"/>
		</LinearLayout>
	</LinearLayout>
	<hev.sockstun.RegularTextView
		android:id="@+id/rt_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="中国网安创新中心"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:textSize="15sp"
		android:layout_marginBottom="15dp"/>
</RelativeLayout>
